--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="question_mark">\?</string>
     <string name="welcome_title">Состав числа</string>
     <string name="game_rules">
-        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
-        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
-        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
+        Правила игры: перед вами будут три фигуры, две снизу и одна сверху, в двух из них будут
+        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре.
+        Для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
         из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
         быть число 3, потому что 3 + 4 = 7
     </string>
